--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-	<html lang="en">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<title>Portafolio Sandra</title>
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/text.css">
+		<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+		<link href="css/lightbox.css" rel="stylesheet">
 	    <link rel="stylesheet" href="css/font-awesome.css">
 	    <link rel="stylesheet" href="css/font-awesome.min.css">
-	    <link href="css/hamburguers.css" rel="stylesheet">
-	    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0 minimo-scale=1.0">
-		
+	    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0 minimum-scale=1.0">
 	</head>
 	<body>
 		<header>
@@ -22,19 +22,15 @@
 		                 	<div class="navbar-header">
                 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar1">
 			                        <span class="">Menu</span>
-			                        <span class="icon-bar"></span>
-			                        <span class="icon-bar"></span>
-			                        <span class="icon-bar"></span>
-			                        <span class="icon-bar"></span>
                					</button>
                					<a class="navbar-brand" href="#perfil">Mi portafolio</a>
               				</div> 
 			                <div class="collapse navbar-collapse" id="navbar1" >
 			                    <ul class="nav navbar-nav navbar-right"><!--navegador-->
-				                    <li><a href="#perfil"><p class="">Perfil</p></a></li>
-                                    <li><a href="#desWeb"><p class="">Desarrollo web</p></a></li>
-                                    <li><a href="#disGrafico"><p class="">Diseño gráfico</p></a></li>
-                                    <li><a href="#contacto"><p class="">Contacto</p></a></li>
+				                    <li><a href="#perfil"><p>Perfil</p></a></li>
+                                    <li><a href="#desWeb"><p>Desarrollo web</p></a></li>
+                                    <li><a href="#disGrafico"><p>Diseño gráfico</p></a></li>
+                                    <li><a href="#contacto"><p>Contacto</p></a></li>
 			                    </ul>
 			                </div>
             			</div>
@@ -46,8 +42,24 @@
         	<div class="container-fluid">
         		<div class="row padTop25"><!--seccion foto con nombre-->
         			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        				<h2 class="text-center colorWhite">Sandra Rodríguez Rosales</h2>
-        				<h3 class="text-center colorWhite">Frond-End web developer</h3>
+        				<div class="container pdRL15">
+        					<div class="foo">
+								  <span class="letter" data-letter="S">S</span>
+								  <span class="letter" data-letter="A">A</span>
+								  <span class="letter" data-letter="N">N</span>
+								  <span class="letter" data-letter="D">D</span>
+								  <span class="letter" data-letter="R">R</span>
+								  <span class="letter" data-letter="A">A</span>
+								  
+							</div>
+        					<!-- <div class="container">
+							    <span class="line-2">Sandra</span>
+							    <span class="line-4">Rodríguez Rosales</span>
+							    <span class="line-3">Front-End web Developer</span>
+							    <span class="line"><a href="https://github.com/codrops/Arctext">Descarga mi CV aqui</a>
+							    <span class="line-6">SR</span>
+							</div> -->
+        				</div>
         			</div>
         		</div>
         	</div>
@@ -60,7 +72,7 @@
 	        				<a name="perfil"></a><h3 class="text-center titulos padBott5 padTop5">Acerca de mí</h3>
 	        				<p class="pdRL15 text-center">Desarrolladora web front-end y diseñadora gráfica. Disfruto mucho trabajar tanto en equipo como individualmente, creo fielmente que la unión siempre dejara muy buenos resultados ya que siempre se adquiere diferentes puntos de vista y puedes aprender de ellos como ellos de ti. Actualmente busco continuar mi crecimiento profesional en el ámbito de la tecnología.</p>
 	        				<p class="pdRL15 text-center">Me interesa hacer proyectos en los que pueda aportar mis conocimientos y me permita crecer cada día.</p>
-	        				<p class="pdRL15 text-center">Busco el aprendizaje continuo</p>
+	        				<p class="pdRL15 text-center">Busco el aprendizaje continuo.</p>
 	        			</div>
 	        		</div>
 	        	</div>
@@ -149,7 +161,7 @@
 					</div>
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
-							<a href=""></a><img src="images/fotosPortafolio/moqupweb.jpg" class="img-responsive maPd0" alt="web"><!--1era imagen web-->
+							<img src="images/fotosPortafolio/moqupweb.jpg" class="img-responsive maPd0" alt="web"><!--1era imagen web-->
 						</div>
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
 							<div class="text-center padTop15 pdRL15">
@@ -202,7 +214,7 @@
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
-							<img src="images/kane.png" class="adaptarImgWeb img-responsive maPd0 altoimgs" alt="spring came"><!--4ta imagen web-->
+							<img src="images/kane.PNG" class="adaptarImgWeb img-responsive maPd0 altoimgs" alt="spring came"><!--4ta imagen web-->
 						</div>
 					</div>
 				</div>
@@ -223,29 +235,75 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 							<div class="contenedor">
-								<div class="elemento">
-									<a href="portafolioEditorialS.html"><img src="images/editorial_Salamanca2.jpg" class="tamañoImgED tamañoWid img-responsive" alt="editorial_Salamanca2"></a>
-									<p></p>
-								</div>
-								<div class="elemento">
-									<a href="tortSancarlos.html"><img src="images/tortillasSancarlos1.jpg" class="tamañoImgTor tamañoWid img-responsive" alt="tortillasSancarlos1"></a>
-									<p></p>
-								</div>
-								<div class="elemento">
-									<a href="hotok.html"><img src="images/cajaHotOK1.jpg" class="tamañoImgCaja tamañoWid img-responsive" alt="cajaHotOK1"></a>
-									<p></p>
-								</div>
-								<div class="elemento">
-									<img src="images/gaceta.jpg" class="tamañoImgGac tamañoWid img-responsive" alt="gaceta">
-									<p></p>
-								</div>
-								<div class="elemento">
-									<a href="sancarlosNopal"><img src="images/diseñoSancarlosT1.jpg" class="tamañoImgTost tamañoWid img-responsive" alt="diseñoSancarlosT1"></a>
-									<p></p>
-								</div>
-								<div class="elemento">
-									<a href="sancarlosSalsas.html"><img src="images/salsaSancarlos1.jpg" class="tamañoImgSalsa tamañoWid img-responsive" alt="salsaSancarlos1"></a>
-									<p></p>
+								<div class="gallery">
+									<div class="row">
+										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+											<a href="images/editorial_Salamanca2.jpg" data-title="Diseño editorial" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive" alt="editorial_Salamanca2">
+												<img src="images/editorial_Salamanca2.jpg" width="300px" class="elemento tamañoWid tamañoImgED img-responsive" alt="editorial_Salamanca2">
+											</a>
+										</div>
+										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+											<a href="images/editorial_Salamanca3.jpg" data-title="Diseño editorial" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive" alt="editorial_Salamanca3">
+												<img src="images/editorial_Salamanca3.jpg" width="300px" class="elemento tamañoWid tamañoImgED img-responsive" alt="editorial_Salamanca3">
+											</a>
+										</div>
+										<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+											<a href="images/editorial_Salamanca4.jpg" data-title="Diseño editorial" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive" alt="editorial_Salamanca4">
+												<img src="images/editorial_Salamanca4.jpg" width="100%" class="elemento tamañoWid tamañoImgED img-responsive tamañoWidMed" alt="editorial_Salamanca4">
+											</a>
+										</div>
+									</div>
+									<div class="row padTop5">
+										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+											<a href="images/tortillasSancarlos1.jpg" data-title="Diseño de caja y marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/tortillasSancarlos1.jpg" width="300px" alt="tortillasSancarlos1" class="elemento tamañoImgED tamañoWid img-responsive">
+											</a>
+										</div>
+										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+											<a href="images/tortillasSancarlos2.jpg" data-title="Diseño de caja y marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/tortillasSancarlos2.jpg" width="300px"  alt="tortillasSancarlos2" class="elemento tamañoWid tamañoImgED img-responsive">
+											</a>
+										</div>
+										<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+											<a href="images/diseñoSancarlosT1.jpg" data-title="Diseño de  marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/diseñoSancarlosT1.jpg" width="300px" alt="diseñoSancarlosT1" class="elemento tamañoImgED  tamañoWid tamañoWidMed img-responsive">
+											</a>
+										</div>
+									</div>
+									<div class="row padTop5">
+										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+											<a href="images/diseñoSancarlosT2.jpg" data-title="Diseño de marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/diseñoSancarlosT2.jpg" width="300px" alt="diseñoSancarlosT2" class="elemento tamañoImgED tamañoWid img-responsive">
+											</a>
+										</div>
+										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+											<a href="images/cajaHotOK1.jpg" data-title="Diseño de caja y marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/cajaHotOK1.jpg" width="300px"  alt="cajaHotOK1" class="elemento tamañoImgED tamañoWid img-responsive">
+											</a>
+										</div>
+										<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+											<a href="images/etiquetasHotok.png" data-title="Diseño de etiqueta" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/etiquetasHotok.png" width="300px" alt="etiquetasHotok" class="elemento tamañoImgED2 tamañoWid tamañoWidMed img-responsive">
+											</a>
+										</div>
+									</div>
+									<div class="row padTop5">
+										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+											<a href="images/gaceta.jpg" data-title="Gaceta-diseño editorial" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/gaceta.jpg" width="300px" alt="gaceta" class="elemento tamañoImgED tamañoWid img-responsive">
+											</a>
+										</div>
+										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+											<a href="images/salsaSancarlos1.jpg" data-title="Diseño de etiqueta" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/salsaSancarlos1.jpg" width="300px" alt="salsaSancarlos1" class="elemento tamañoImgED tamañoWid img-responsive">
+											</a>
+										</div>
+										<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+											<a href="images/salsaSancarlos3.png" data-title="Diseño de etiqueta" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/salsaSancarlos3.png"  alt="salsaSancarlos3" class="elemento tamañoWid tamañoWidMed img-responsive">
+											</a>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -257,7 +315,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-						<a name="contacto"></a><p class="text-center titulos">Contactame</p>
+						<a name="contacto"></a><p class="text-center titulos">Contáctame y hagamos algo juntos</p>
 						<p></p>
 					</div>
 				</div>
@@ -281,7 +339,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-						<p class="colorWhite">&copy; 20017 Sandra Rodríguez.</p>
+						<p class="colorWhite">&copy; 20016 Sandra Rodríguez.</p>
 					</div>
 				</div>
 			</div>
@@ -290,9 +348,9 @@
 		<script src="js/bootstrap.min.js" type="text/javascript"></script>
 	    <script src="js/jquery-3.1.0.min.js" type="text/javascript"></script>
 	    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+	    <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="js/tagcanvas.min.js" type="text/javascript"></script>
-		<script src="js/mansonry.js"></script>
+		<script type="text/javascript" src="js/lightbox.js"></script>
 		<script src="js/main.js"></script>
 		
 	</body>
