--- a/index.html
+++ b/index.html
@@ -38,28 +38,20 @@
                 </div>
             </div>
         </header>
-        <section class="imgSup"><!--imagen de fondo-->
+        <section><!--imagen de fondo-->
         	<div class="container-fluid">
-        		<div class="row padTop25"><!--seccion foto con nombre-->
+        		<div class="row padTop10"><!--seccion foto con nombre-->
         			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        				<center><img src="images/fotosPortafolio/yo.jpg" class="img-responsive fotoPerfil"></center>
         				<div class="container pdRL15">
         					<div class="foo">
-								  <span class="letter" data-letter="S">S</span>
-								  <span class="letter" data-letter="A">A</span>
-								  <span class="letter" data-letter="N">N</span>
-								  <span class="letter" data-letter="D">D</span>
-								  <span class="letter" data-letter="R">R</span>
-								  <span class="letter" data-letter="A">A</span>
-								  
+								<span class="letter" data-letter="S">S</span>
+								<span class="letter" data-letter="R">R</span>
 							</div>
-        					<!-- <div class="container">
-							    <span class="line-2">Sandra</span>
-							    <span class="line-4">Rodríguez Rosales</span>
-							    <span class="line-3">Front-End web Developer</span>
-							    <span class="line"><a href="https://github.com/codrops/Arctext">Descarga mi CV aqui</a>
-							    <span class="line-6">SR</span>
-							</div> -->
         				</div>
+        				<p class="titNombre text-center">Sandra Rodríguez Rosales</p>
+        				<h2 class="text-center colorWhite">Front-End web Developer</h2>
+        				<a href="#"><p class="text-center colorWhite linkcv">Descarga mi CV</p></a>
         			</div>
         		</div>
         	</div>
@@ -91,11 +83,11 @@
 				<div class="row">
 					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">		
 						<div class="skills">
-							<progress value="50" max="100"></progress><span>HTML</span><span class="sep">intermedio</span>
-							<progress value="50" max="100"></progress><span>CSS</span><span class="sep">intermedio</span>
-							<progress value="30" max="100"></progress><span>JavaScript</span><span class="sep">básico</span>
-							<progress value="30" max="100"></progress><span>jQuery</span><span class="sep">básico</span>
-							<progress value="50" max="100"></progress><span>Git</span><span class="sep">intermedio</span>
+							<progress class="movible" value="50" max="100"></progress><span>HTML</span><span class="sep">intermedio</span>
+							<progress class="movible" value="50" max="100"></progress><span>CSS</span><span class="sep">intermedio</span>
+							<progress class="movible" value="30" max="100"></progress><span>JavaScript</span><span class="sep">básico</span>
+							<progress class="movible" value="30" max="100"></progress><span>jQuery</span><span class="sep">básico</span>
+							<progress class="movible" value="50" max="100"></progress><span>Git</span><span class="sep">intermedio</span>
 						</div>
 					</div>
 					<div class="hidden-xs col-sm-4 col-md-4 col-lg-4">
@@ -161,11 +153,12 @@
 					</div>
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
-							<img src="images/fotosPortafolio/moqupweb.jpg" class="img-responsive maPd0" alt="web"><!--1era imagen web-->
+							<img src="images/theGentleman.png" class="img-responsive maPd0" alt="theGentleman"><!--1era imagen web-->
+							<button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button>
 						</div>
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
 							<div class="text-center padTop15 pdRL15">
-								<p class="lead">título</p>
+								<p class="lead">The Gentleman</p>
 								<p>pequeña descripción</p><!--descripcion de imagen web 1-->
 								<button type="button" class="btn btn-default btn-sm active">ver más</button>
 							</div>
@@ -186,6 +179,7 @@
 						</div>	
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
 							<img src="images/springCame.png" class="adaptarImgWeb img-responsive maPd0" alt="spring came"><!--2da imagen web-->
+							<button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button>
 						</div>
 					</div>
 					<div class="row">
@@ -196,6 +190,7 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
 							<img src="images/accessories.png" class="adaptarImgWeb img-responsive maPd0" alt="web"><!--3era imagen web-->
+							<button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button>
 						</div>
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
 							<div class="text-center padTop15 pdRL15">
@@ -215,6 +210,7 @@
 						</div>
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
 							<img src="images/kane.PNG" class="adaptarImgWeb img-responsive maPd0 altoimgs" alt="spring came"><!--4ta imagen web-->
+							<button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button>
 						</div>
 					</div>
 				</div>
@@ -328,7 +324,7 @@
 							<i class="fa fa-envelope fa-2x" aria-hidden="true"><p class="textTamP">san.rodzrosales@gmail.com</p></i>
 						</div>	
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 padTop10">
+					<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 						<a href="" class="linkHov"><i class="fa fa-github fa-5x" aria-hidden="true"></i></a>
 						<a href="" class="linkHov"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
 					</div>
@@ -339,7 +335,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-						<p class="colorWhite">&copy; 20016 Sandra Rodríguez.</p>
+						<p class="colorWhite bgBla">&copy; 20016 Sandra Rodríguez.</p>
 					</div>
 				</div>
 			</div>
