--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         				</div>
         				<p class="titNombre text-center">Sandra Rodríguez Rosales</p>
         				<h2 class="text-center colorWhite">Front-End web Developer</h2>
-        				<a href="#"><p class="text-center colorWhite linkcv">Descarga mi CV</p></a>
+        				<a href="#" data-toggle="tooltip" title="hello!"><p class="text-center colorWhite linkcv">Descarga mi CV</p></a>
         			</div>
         		</div>
         	</div>
