--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/text.css">
-		<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+		<!-- <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"> -->
 		<link href="css/lightbox.css" rel="stylesheet">
 	    <link rel="stylesheet" href="css/font-awesome.css">
 	    <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -285,8 +285,8 @@
 									</div>
 									<div class="row padTop5">
 										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-											<a href="images/gaceta.jpg" data-title="Gaceta-diseño editorial" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
-												<img src="images/gaceta.jpg" width="300px" alt="gaceta" class="elemento tamañoImgED tamañoWid img-responsive">
+											<a href="images/Gaceta.jpg" data-title="Gaceta-diseño editorial" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/Gaceta.jpg" width="300px" alt="gaceta" class="elemento tamañoImgED tamañoWid img-responsive">
 											</a>
 										</div>
 										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
@@ -345,7 +345,7 @@
 	    <script src="js/jquery-3.1.0.min.js" type="text/javascript"></script>
 	    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 	    <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/lightbox.js"></script>
 		<script src="js/main.js"></script>
 		
