--- a/index.html
+++ b/index.html
@@ -40,18 +40,17 @@
         </header>
         <section><!--imagen de fondo-->
         	<div class="container-fluid">
-        		<div class="row padTop5 padBott15"><!--seccion titulo nombre-->
+        		<div class="row padTop10 padBott15"><!--seccion titulo nombre-->
         			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         				<div class="container pdRL15">
         					<div class="foo">
 								<span class="letter" data-letter="S">S</span>
 								<span class="letter" data-letter="R">R</span>
 							</div>
-							<div class="ribbon text-center">
-        				<p class="titNombre text-center">Sandra Rodríguez Rosales</p>
-
-        				<h2 class="text-center colorfront">Front-End web Developer</h2>
-        				</div>
+							<div class="text-center">
+		        				<p class="titNombre text-center cuadroTrans">Sandra Rodríguez Rosales</p>
+		        				<h2 class="text-center colorfront cuadroTrans">Front-End web Developer</h2>
+        					</div>
         				</div>
         			</div>
         		</div>
