--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 								<span class="letter" data-letter="R">R</span>
 							</div>
 							<div class="text-center">
-		        				<p class="titNombre text-center cuadroTrans">Sandra Rodríguez Rosales</p>
+							<div class="cuadroTrans">
+		        				<p class="titNombre text-center">Sandra</p>
+		        				<p class="titApe text-center">Rodríguez Rosales</p>
+		        			</div>	
 		        				<h2 class="text-center colorfront cuadroTrans">Front-End web Developer</h2>
         					</div>
         				</div>
@@ -61,8 +64,8 @@
 	        	<div class="container-fluid">
 	        		<div class="row margTop10">
 	        			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	        				<center><img src="images/fotosPortafolio/yo.jpg" class="img-responsive fotoPerfil"></center>
-	        				<a name="perfil"></a><h3 class="text-center titulos padBott5 padTop5">Acerca de mí</h3>
+	        				<a name="perfil"></a><center><img src="images/fotosPortafolio/yo.jpg" class="img-responsive fotoPerfil"></center>
+	        				<h3 class="text-center titulos padBott5 padTop5">Acerca de mí</h3>
 	        				<p class="pdRL15 text-center">Desarrolladora web front-end y diseñadora gráfica. Disfruto mucho trabajar tanto en equipo como individualmente, creo fielmente que la unión siempre dejara muy buenos resultados ya que siempre se adquiere diferentes puntos de vista y puedes aprender de ellos como ellos de ti. Actualmente busco continuar mi crecimiento profesional en el ámbito de la tecnología.</p>
 	        				<p class="pdRL15 text-center">Me interesa hacer proyectos en los que pueda aportar mis conocimientos y me permita crecer cada día.</p>
 	        				<p class="pdRL15 text-center">Busco el aprendizaje continuo.</p>
@@ -157,11 +160,6 @@
 			<section class="pdRL15 padTop5 padBott15"><!-- seccion de imagenes de Web y descripcion con titulo-->
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-							<p></p><!--1er titulo-->
-						</div>
-					</div>
-					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
 							<img src="images/theGentleman.png" class="img-responsive maPd0" alt="theGentleman"><!--1era imagen web-->
 							<button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button>
@@ -169,22 +167,15 @@
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
 							<div class="text-center padTop15 pdRL15">
 								<p class="lead">The Gentleman</p>
-								<p>pequeña descripción</p><!--descripcion de imagen web 1-->
-								<button type="button" class="btn btn-default btn-sm active">ver más</button>
+								<a href="https://rodriguezsanrosales.github.io/22_gentleman/"><button type="button" class="btn btn-default btn-sm active">ver más</button></a>
 							</div>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-							<p></p><!--2do titulo-->
-						</div>
-					</div>
-					<div class="row">
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
-							<div class="text-center padTop15 pdRL15">
-								<p class="lead">Spring came</p>
-								<p>pequeña descripción</p><!--descripcion de imagen web 2--> 
-								<button type="button" class="btn btn-sm active">ver más</button>
+							<div class="text-center padTop25 pdRL15">
+								<p class="lead">Spring came</p> 
+								<a href="https://rodriguezsanrosales.github.io/26_Sprint1-Ejercicio1/"><button type="button" class="btn btn-sm active">ver más</button></a>
 							</div>
 						</div>	
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
@@ -193,28 +184,21 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-							<p></p><!--3er titulo-->
-						</div>
-					</div>
-					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
 							<img src="images/accessories.png" class="adaptarImgWeb img-responsive maPd0" alt="web"><!--3era imagen web-->
 							<button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button>
 						</div>
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
-							<div class="text-center padTop15 pdRL15">
+							<div class="text-center padTop25 pdRL15">
 								<p class="lead">Accessories fashion</p>
-								<p>pequeña descripción</p><!--descripcion de imagen web 3-->
 								<button type="button" class="btn btn-sm active">ver más</button>
 							</div>	
 						</div>
 					</div>
 					<div class="row">
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
-							<div class="text-center padTop15 pdRL15">
+							<div class="text-center padTop25 pdRL15">
 								<p class="lead">Kane</p>
-								<p>pequeña descripción</p><!--descripcion de imagen web 4-->
 								<button type="button" class="btn btn-sm active">ver más</button>
 							</div>
 						</div>
@@ -334,10 +318,10 @@
 						<p>san.rodzrosales@gmail.com</p>
 					</div>
 					<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-						<a href="" class="linkHov"><i class="fa fa-github fa-5x" aria-hidden="true"></i></a>
+						<a href="https://github.com/RodriguezSanRosales" class="linkHov"><i class="fa fa-github fa-5x" aria-hidden="true"></i></a>
 					</div>
 					<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-						<a href="" class="linkHov"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
+						<a href="https://www.linkedin.com/in/sandra-rodr%C3%ADguez-rosales-63a99a131?trk=nav_responsive_tab_profile" class="linkHov"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
 					</div>
 				</div>		
 			</div>
