--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 		</section>
 		</section>
 		<section class="padTop2 contenedorSecciones">
-			<section><!--seccion de desarrollo web portada con titulo-->
+			<section><!--seccion de desarrollo web -->
 				<div class="container-fluid">
 					<div class="row padTop10">
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -162,12 +162,12 @@
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
 							<img src="images/theGentleman.png" class="img-responsive maPd0" alt="theGentleman"><!--1era imagen web-->
-							<button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button>
+							<a href="https://rodriguezsanrosales.github.io/22_gentleman/" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
 						</div>
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
 							<div class="text-center padTop15 pdRL15">
 								<p class="lead">The Gentleman</p>
-								<a href="https://rodriguezsanrosales.github.io/22_gentleman/"><button type="button" class="btn btn-default btn-sm active">ver más</button></a>
+								<a href="https://rodriguezsanrosales.github.io/22_gentleman/" target="_blank"><button type="button" class="btn btn-default btn-sm active">ver más</button></a>
 							</div>
 						</div>
 					</div>
@@ -175,23 +175,23 @@
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
 							<div class="text-center padTop25 pdRL15">
 								<p class="lead">Spring came</p> 
-								<a href="https://rodriguezsanrosales.github.io/26_Sprint1-Ejercicio1/"><button type="button" class="btn btn-sm active">ver más</button></a>
+								<a href="https://rodriguezsanrosales.github.io/26_Sprint1-Ejercicio1/" target="_blank"><button type="button" class="btn btn-sm active">ver más</button></a>
 							</div>
 						</div>	
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
 							<img src="images/springCame.png" class="adaptarImgWeb img-responsive maPd0" alt="spring came"><!--2da imagen web-->
-							<button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button>
+							<a href="https://rodriguezsanrosales.github.io/26_Sprint1-Ejercicio1/" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
 							<img src="images/accessories.png" class="adaptarImgWeb img-responsive maPd0" alt="web"><!--3era imagen web-->
-							<button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button>
+							<a href="https://rodriguezsanrosales.github.io/32_Problema/" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
 						</div>
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
 							<div class="text-center padTop25 pdRL15">
 								<p class="lead">Accessories fashion</p>
-								<button type="button" class="btn btn-sm active">ver más</button>
+								<a href="https://rodriguezsanrosales.github.io/32_Problema/" target="_blank"><button type="button" class="btn btn-sm active">ver más</button></a>
 							</div>	
 						</div>
 					</div>
@@ -199,12 +199,12 @@
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
 							<div class="text-center padTop25 pdRL15">
 								<p class="lead">Kane</p>
-								<button type="button" class="btn btn-sm active">ver más</button>
+								<a href="https://rodriguezsanrosales.github.io/33_Kane-Theme/" target="_blank"><button type="button" class="btn btn-sm active">ver más</button></a>
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
 							<img src="images/kane.PNG" class="adaptarImgWeb img-responsive maPd0 altoimgs" alt="spring came"><!--4ta imagen web-->
-							<button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button>
+							<a href="https://rodriguezsanrosales.github.io/33_Kane-Theme/" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
 						</div>
 					</div>
 				</div>
