--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Portafolio Sandra</title>
-		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/text.css">
 		<link href="css/lightbox.css" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Bungee|Raleway:900" rel="stylesheet">
-	    <link rel="stylesheet" href="css/font-awesome.css">
-	    <link rel="stylesheet" href="css/font-awesome.min.css">
+	    <link rel="stylesheet" href="css/font-awesome.css"><!-- 
+	    <link rel="stylesheet" href="css/font-awesome.min.css"> -->
 	    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0 minimum-scale=1.0">
 	</head>
 	<body>
@@ -22,8 +20,8 @@
 		                 	<div class="navbar-header">
                 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar1">
 			                        <span class="">Menu</span>
+			                        <span class="icon-bar"></span>
                					</button>
-               					<a class="navbar-brand" href="index.html">SR</a>
               				</div> 
 			                <div class="collapse navbar-collapse" id="navbar1" >
 			                    <ul class="nav navbar-nav navbar-right"><!--navegador-->
@@ -38,6 +36,7 @@
                 </div>
             </div>
         </header>
+        <section id="main">
         <section><!--imagen de fondo-->
         	<div class="container-fluid">
         		<div class="row padTop10 padBott15"><!--seccion titulo nombre-->
@@ -59,14 +58,14 @@
         		</div>
         	</div>
         </section>
-        <section class="fondoBackCont contenedorSecciones padBott15">
+        <section class="fondoBackCont contenedorSecciones padBott15 panel" id="perfil">
 			<section><!--perfil-acerca de mi-->
 	        	<div class="container-fluid">
 	        		<div class="row margTop10">
 	        			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	        				<a name="perfil"></a><center><img src="images/fotosPortafolio/yo.jpg" class="img-responsive fotoPerfil"></center>
+	        				<!-- <a name="perfil"></a> --><center><img src="images/fotosPortafolio/yo.jpg" class="img-responsive fotoPerfil"></center>
 	        				<h3 class="text-center titulos padBott5 padTop5">Acerca de mí</h3>
-	        				<p class="pdRL15 text-center">Desarrolladora web front-end y diseñadora gráfica. Disfruto mucho trabajar tanto en equipo como individualmente, creo fielmente que la unión siempre dejara muy buenos resultados ya que siempre se adquiere diferentes puntos de vista y puedes aprender de ellos como ellos de ti. Actualmente busco continuar mi crecimiento profesional en el ámbito de la tecnología.</p>
+	        				<p class="pdRL15 text-center">Desarrolladora web front-end y diseñadora gráfica. Disfruto mucho trabajar tanto en equipo como individualmente, creo fielmente que la unión siempre dejará muy buenos resultados ya que siempre se adquiere diferentes puntos de vista y se puede aprender de ellos. Actualmente busco continuar mi crecimiento profesional en el ámbito de la tecnología.</p>
 	        				<p class="pdRL15 text-center">Me interesa hacer proyectos en los que pueda aportar mis conocimientos y me permita crecer cada día.</p>
 	        				<p class="pdRL15 text-center">Busco el aprendizaje continuo.</p>
 	        			</div>
@@ -83,7 +82,7 @@
 	        		</div>
 	        	</div>
 	        </section>
-	        <section class="fondoMaceta pdRL15"><!--slider habilidades técnicas-->
+	        <section class="fondoMaceta pdRL15"><!--habilidades técnicas-->
 				<div class="row">
 					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">		
 						<div class="skills">
@@ -139,19 +138,19 @@
 				<div class="row padTop10">
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 						<hr>
-						<a href="#" data-toggle="tooltip" title="hello!"><p class="text-center linkcv">Descarga mi CV</p></a>
+						<a href="images/CV1_San.pdf" title="hello!"  target="_blank"><p class="text-center linkcv">Descarga mi CV</p></a>
 					</div>
 				</div>
 			</div>
 		</section>
 		</section>
-		<section class="padTop2 contenedorSecciones">
+		<section class="padTop2 contenedorSecciones panel" id="desWeb">
 			<section><!--seccion de desarrollo web -->
 				<div class="container-fluid">
 					<div class="row padTop10">
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 							<div class="">
-								<a name="desWeb"></a><p class="titulos text-center">Desarrollo web</p>
+								<!-- <a name="desWeb"></a> --><p class="titulos text-center">Desarrollo web</p>
 							</div>
 						</div>
 					</div>
@@ -159,7 +158,7 @@
 			</section>
 			<section class="pdRL15 padTop5 padBott15"><!-- seccion de imagenes de Web y descripcion con titulo-->
 				<div class="container-fluid">
-					<div class="row">
+					<div class="row margBot15">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
 							<img src="images/theGentleman.png" class="img-responsive maPd0" alt="theGentleman"><!--1era imagen web-->
 							<a href="https://rodriguezsanrosales.github.io/22_gentleman/" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
@@ -171,7 +170,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row margBot15">
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
 							<div class="text-center padTop25 pdRL15">
 								<p class="lead">Spring came</p> 
@@ -183,7 +182,7 @@
 							<a href="https://rodriguezsanrosales.github.io/26_Sprint1-Ejercicio1/" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row margBot15">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
 							<img src="images/accessories.png" class="adaptarImgWeb img-responsive maPd0" alt="web"><!--3era imagen web-->
 							<a href="https://rodriguezsanrosales.github.io/32_Problema/" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
@@ -195,7 +194,7 @@
 							</div>	
 						</div>
 					</div>
-					<div class="row">
+					<div class="row margBot15">
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
 							<div class="text-center padTop25 pdRL15">
 								<p class="lead">Kane</p>
@@ -203,19 +202,31 @@
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
-							<img src="images/kane.PNG" class="adaptarImgWeb img-responsive maPd0 altoimgs" alt="spring came"><!--4ta imagen web-->
+							<img src="images/kane.PNG" class="adaptarImgWeb img-responsive maPd0 altoimgs" alt="spring came"><!--5ta imagen web-->
 							<a href="https://rodriguezsanrosales.github.io/33_Kane-Theme/" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+							<img src="images/portafolioCoder.PNG" class="adaptarImgWeb img-responsive maPd0 altoimgs" alt="portafolioCoder"><!--5ta imagen web-->
+							<a href="https://rodriguezsanrosales.github.io/28_ProblemaCoder/" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
+						</div>
+						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6 maPd0">
+							<div class="text-center padTop25 pdRL15">
+								<p class="lead">Portafolio Coder</p>
+								<a href="https://rodriguezsanrosales.github.io/28_ProblemaCoder/" target="_blank"><button type="button" class="btn btn-sm active">ver más</button></a>
+							</div>
 						</div>
 					</div>
 				</div>
 			</section>
 		</section>
-		<section class="contenedorSecciones">
+		<section class="contenedorSecciones panel" id="disGrafico">
 			<section>
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-							<a name="disGrafico"></a><p class="text-center titulos padTop10">Diseño gráfico</p>
+							<!-- <a name="disGrafico"></a> --><p class="text-center titulos padTop10">Diseño gráfico</p>
 						</div>
 					</div>	 
 				</div>
@@ -301,11 +312,11 @@
 				</div>
 			</section>
 		</section>
-		<section class="seccionContacto fondoTrans">
+		<section class="seccionContacto fondoTrans panel" id="contacto">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-						<a name="contacto"></a><p class="text-center titulos">Contáctame y hagamos algo juntos</p>
+						<!-- <a name="contacto"></a> --><p class="text-center titulos">Contáctame y hagamos algo juntos</p>
 					</div>
 				</div>
 				<div class="row text-center padTop5">	
@@ -330,20 +341,22 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-						<p class="colorWhite bgBla">&copy; 20016 Sandra Rodríguez.</p>
+						<p class="colorWhite bgBla">&copy; 2016 Sandra Rodríguez.</p>
 					</div>
 				</div>
 			</div>
 		</footer>
-		
-		<script src="js/bootstrap.min.js" type="text/javascript"></script>
-	    <script src="js/jquery-3.1.0.min.js" type="text/javascript"></script>
-	    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-	    <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
+		</section>
+		<!-- 
+		<script src="js/bootstrap.min.js" type="text/javascript"></script> -->
+	    <script src="js/jquery-3.1.0.min.js" type="text/javascript"></script><!-- 
+	    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script> -->
+	   <!--  <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script> -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/lightbox.js"></script>
 		<script src="js/main.js"></script>
-		
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 	</body>
 </html>
 
