--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
-							<img src="images/kane.PNG" class="adaptarImgWeb img-responsive maPd0 altoimgs" alt="spring came"><!--5ta imagen web-->
+							<img src="images/kane.PNG" class="adaptarImgWeb img-responsive maPd0 altoimgs" alt="spring came"><!--4ta imagen web-->
 							<a href="https://rodriguezsanrosales.github.io/33_Kane-Theme/" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-							<img src="images/portafolioCoder.PNG" class="adaptarImgWeb img-responsive maPd0 altoimgs" alt="portafolioCoder"><!--5ta imagen web-->
+							<img src="images/portafolioCoder.png" class="adaptarImgWeb img-responsive maPd0 altoimgs" alt="portafolioCoder"><!--5ta imagen web-->
 							<a href="https://rodriguezsanrosales.github.io/28_ProblemaCoder/" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
 						</div>
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6 maPd0">
@@ -355,7 +355,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/lightbox.js"></script>
 		<script src="js/main.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+		<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script> -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 	</body>
 </html>
