--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
 					<div class="row margBot15">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
 							<img src="images/accessories.png" class="adaptarImgWeb img-responsive maPd0" alt="web"><!--3era imagen web-->
-							<a href="https://rodriguezsanrosales.github.io/32_Problema/" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
+							<a href="https://rodriguezsanrosales.github.io/32_fashion/index.html" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
 						</div>
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
 							<div class="text-center padTop25 pdRL15">
 								<p class="lead">Accessories fashion</p>
-								<a href="https://rodriguezsanrosales.github.io/32_Problema/" target="_blank"><button type="button" class="btn btn-sm active">ver más</button></a>
+								<a href="https://rodriguezsanrosales.github.io/32_fashion/index.html" target="_blank"><button type="button" class="btn btn-sm active">ver más</button></a>
 							</div>	
 						</div>
 					</div>
