corrigiendo detalles de paddings

--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-							<img src="images/portafolioCoder.png" class="adaptarImgWeb img-responsive maPd0 altoimgs" alt="portafolioCoder"><!--5ta imagen web-->
+						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
+							<img src="images/portafolioCoder.png" class="adaptarImgWeb img-responsive maPd0" alt="portafolioCoder"><!--5ta imagen web-->
 							<a href="https://rodriguezsanrosales.github.io/28_ProblemaCoder/" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
 						</div>
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6 maPd0">
