haciendo las imagenes menos pesadas

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	        	<div class="container-fluid">
 	        		<div class="row margTop10">
 	        			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	        				<!-- <a name="perfil"></a> --><center><img src="images/fotosPortafolio/yo.jpg" class="img-responsive fotoPerfil"></center>
+	        				<!-- <a name="perfil"></a> --><center><img src="images/fotosPortafolio/nuevasFotos/foto.JPG" class="img-responsive fotoPerfil"></center>
 	        				<h3 class="text-center titulos padBott5 padTop5">Acerca de mí</h3>
 	        				<p class="pdRL15 text-center">Desarrolladora web front-end y diseñadora gráfica. Disfruto mucho trabajar tanto en equipo como individualmente, creo fielmente que la unión siempre dejará muy buenos resultados ya que siempre se adquiere diferentes puntos de vista y se puede aprender de ellos. Actualmente busco continuar mi crecimiento profesional en el ámbito de la tecnología.</p>
 	        				<p class="pdRL15 text-center">Me interesa hacer proyectos en los que pueda aportar mis conocimientos y me permita crecer cada día.</p>
@@ -239,30 +239,30 @@
 								<div class="gallery">
 									<div class="row">
 										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-											<a href="images/editorial_Salamanca2.jpg" data-title="Diseño editorial" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive" alt="editorial_Salamanca2">
-												<img src="images/editorial_Salamanca2.jpg" width="300px" class="elemento tamañoWid tamañoImgED img-responsive" alt="editorial_Salamanca2">
+											<a href="images/fotosPortafolio/nuevasFotos/editorial_Salamanca2.jpg" data-title="Diseño editorial" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive" alt="editorial_Salamanca2">
+												<img src="images/fotosPortafolio/nuevasFotos/editorial_Salamanca2.jpg" width="300px" class="elemento tamañoWid tamañoImgED img-responsive" alt="editorial_Salamanca2">
 											</a>
 										</div>
 										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-											<a href="images/editorial_Salamanca3.jpg" data-title="Diseño editorial" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive" alt="editorial_Salamanca3">
-												<img src="images/editorial_Salamanca3.jpg" width="300px" class="elemento tamañoWid tamañoImgED img-responsive" alt="editorial_Salamanca3">
+											<a href="images/fotosPortafolio/nuevasFotos/editorial_Salamanca3.jpg" data-title="Diseño editorial" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive" alt="editorial_Salamanca3">
+												<img src="images/fotosPortafolio/nuevasFotos/editorial_Salamanca3.jpg" width="300px" class="elemento tamañoWid tamañoImgED img-responsive" alt="editorial_Salamanca3">
 											</a>
 										</div>
 										<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-											<a href="images/editorial_Salamanca4.jpg" data-title="Diseño editorial" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive" alt="editorial_Salamanca4">
-												<img src="images/editorial_Salamanca4.jpg" width="100%" class="elemento tamañoWid tamañoImgED img-responsive tamañoWidMed" alt="editorial_Salamanca4">
+											<a href="images/fotosPortafolio/nuevasFotos/editorial_Salamanca4.jpg" data-title="Diseño editorial" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive" alt="editorial_Salamanca4">
+												<img src="images/fotosPortafolio/nuevasFotos/editorial_Salamanca4.jpg" width="100%" class="elemento tamañoWid tamañoImgED img-responsive tamañoWidMed" alt="editorial_Salamanca4">
 											</a>
 										</div>
 									</div>
 									<div class="row padTop5">
 										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-											<a href="images/tortillasSancarlos1.jpg" data-title="Diseño de caja y marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
-												<img src="images/tortillasSancarlos1.jpg" width="300px" alt="tortillasSancarlos1" class="elemento tamañoImgED tamañoWid img-responsive">
+											<a href="images/fotosPortafolio/nuevasFotos/tortillasSancarlos1.jpg" data-title="Diseño de caja y marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/fotosPortafolio/nuevasFotos/tortillasSancarlos1.jpg" width="300px" alt="tortillasSancarlos1" class="elemento tamañoImgED tamañoWid img-responsive">
 											</a>
 										</div>
 										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-											<a href="images/tortillasSancarlos2.jpg" data-title="Diseño de caja y marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
-												<img src="images/tortillasSancarlos2.jpg" width="300px"  alt="tortillasSancarlos2" class="elemento tamañoWid tamañoImgED img-responsive">
+											<a href="images/fotosPortafolio/nuevasFotos/tortillasSancarlos2.jpg" data-title="Diseño de caja y marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/fotosPortafolio/nuevasFotos/tortillasSancarlos2.jpg" width="300px"  alt="tortillasSancarlos2" class="elemento tamañoWid tamañoImgED img-responsive">
 											</a>
 										</div>
 										<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
@@ -283,25 +283,25 @@
 											</a>
 										</div>
 										<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-											<a href="images/etiquetasHotok.png" data-title="Diseño de etiqueta" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
-												<img src="images/etiquetasHotok.png" width="300px" alt="etiquetasHotok" class="elemento tamañoImgED2 tamañoWid tamañoWidMed img-responsive">
+											<a href="images/fotosPortafolio/nuevasFotos/etiquetasHotok.png" data-title="Diseño de etiqueta" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/fotosPortafolio/nuevasFotos/etiquetasHotok.png" width="300px" alt="etiquetasHotok" class="elemento tamañoImgED2 tamañoWid tamañoWidMed img-responsive">
 											</a>
 										</div>
 									</div>
 									<div class="row padTop5">
 										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-											<a href="images/Gaceta.jpg" data-title="Gaceta-diseño editorial" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
-												<img src="images/Gaceta.jpg" width="300px" alt="gaceta" class="elemento tamañoImgED tamañoWid img-responsive">
+											<a href="images/fotosPortafolio/nuevasFotos/Gaceta.jpg" data-title="Gaceta-diseño editorial" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/fotosPortafolio/nuevasFotos/Gaceta.jpg" width="300px" alt="gaceta" class="elemento tamañoImgED tamañoWid img-responsive">
 											</a>
 										</div>
 										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-											<a href="images/salsaSancarlos1.jpg" data-title="Diseño de etiqueta" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
-												<img src="images/salsaSancarlos1.jpg" width="300px" alt="salsaSancarlos1" class="elemento tamañoImgED tamañoWid img-responsive">
+											<a href="images/fotosPortafolio/nuevasFotos/salsaSancarlos1.jpg" data-title="Diseño de etiqueta" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/fotosPortafolio/nuevasFotos/salsaSancarlos1.jpg" width="300px" alt="salsaSancarlos1" class="elemento tamañoImgED tamañoWid img-responsive">
 											</a>
 										</div>
 										<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-											<a href="images/salsaSancarlos3.png" data-title="Diseño de etiqueta" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
-												<img src="images/salsaSancarlos3.png"  alt="salsaSancarlos3" class="elemento tamañoWid tamañoWidMed img-responsive">
+											<a href="images/fotosPortafolio/nuevasFotos/etiquetaSalsa.png" data-title="Diseño de etiqueta" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/fotosPortafolio/nuevasFotos/etiquetaSalsa.png"  alt="salsaSancarlos3" class="elemento tamañoWid tamañoWidMed img-responsive">
 											</a>
 										</div>
 									</div>
