--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	        	<div class="container-fluid">
 	        		<div class="row margTop10">
 	        			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	        				<!-- <a name="perfil"></a> --><center><img src="images/fotosPortafolio/foto.jpg" class="img-responsive fotoPerfil"></center>
+	        				<!-- <a name="perfil"></a> --><center><img src="images/foto.jpg" class="img-responsive fotoPerfil"></center>
 	        				<h3 class="text-center titulos padBott5 padTop5">Acerca de mí</h3>
 	        				<p class="pdRL15 text-center">Desarrolladora web front-end y diseñadora gráfica. Disfruto mucho trabajar tanto en equipo como individualmente, creo fielmente que la unión siempre dejará muy buenos resultados ya que siempre se adquiere diferentes puntos de vista y se puede aprender de ellos. Actualmente busco continuar mi crecimiento profesional en el ámbito de la tecnología.</p>
 	        				<p class="pdRL15 text-center">Me interesa hacer proyectos en los que pueda aportar mis conocimientos y me permita crecer cada día.</p>
