--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </header>
-        <section id="main">
+        <section>
         <section><!--imagen de fondo-->
         	<div class="container-fluid">
         		<div class="row padTop10 padBott15"><!--seccion titulo nombre-->
