--- a/index.html
+++ b/index.html
@@ -266,20 +266,20 @@
 											</a>
 										</div>
 										<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-											<a href="images/diseñoSancarlosT1.jpg" data-title="Diseño de  marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
-												<img src="images/diseñoSancarlosT1.jpg" width="300px" alt="diseñoSancarlosT1" class="elemento tamañoImgED  tamañoWid tamañoWidMed img-responsive">
+											<a href="images/diseñoSancarlosT1-min.jpg" data-title="Diseño de  marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/diseñoSancarlosT1-min.jpg" width="300px" alt="diseñoSancarlosT1" class="elemento tamañoImgED  tamañoWid tamañoWidMed img-responsive">
 											</a>
 										</div>
 									</div>
 									<div class="row padTop5">
 										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-											<a href="images/diseñoSancarlosT2.jpg" data-title="Diseño de marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
-												<img src="images/diseñoSancarlosT2.jpg" width="300px" alt="diseñoSancarlosT2" class="elemento tamañoImgED tamañoWid img-responsive">
+											<a href="images/diseñoSancarlosT2-min.jpg" data-title="Diseño de marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/diseñoSancarlosT2-min.jpg" width="300px" alt="diseñoSancarlosT2" class="elemento tamañoImgED tamañoWid img-responsive">
 											</a>
 										</div>
 										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-											<a href="images/cajaHotOK1.jpg" data-title="Diseño de caja y marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
-												<img src="images/cajaHotOK1.jpg" width="300px"  alt="cajaHotOK1" class="elemento tamañoImgED tamañoWid img-responsive">
+											<a href="images/cajaHotOK1-min.jpg" data-title="Diseño de caja y marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
+												<img src="images/cajaHotOK1-min.jpg" width="300px"  alt="cajaHotOK1" class="elemento tamañoImgED tamañoWid img-responsive">
 											</a>
 										</div>
 										<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
