--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 					</div>
 					<div class="row margBot15">
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 maPd0">
-							<img src="images/accessories1.png" class="adaptarImgWeb img-responsive maPd0 border" alt="web"><!--3era imagen web-->
+							<img src="images/accessories.jpg" class="adaptarImgWeb img-responsive maPd0 border" alt="web"><!--3era imagen web-->
 							<a href="https://rodriguezsanrosales.github.io/32_fashion/index.html" target="_blank"><button type="button" class="btn btn-default btn-sm active visible-xs">ver más</button></a>
 						</div>
 						<div class="hidden-xs col-sm-6 col-md-6 col-lg-6">
