cambio de cv pdf

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				<div class="row padTop10">
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 						<hr>
-						<a href="images/CV1_San.pdf" title="hello!"  target="_blank"><p class="text-center linkcv">Descarga mi CV</p></a>
+						<a href="images/CV-San1.pdf" title="hello!"  target="_blank"><p class="text-center linkcv">Descarga mi CV</p></a>
 					</div>
 				</div>
 			</div>
