--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				<div class="row padTop10">
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 						<hr>
-						<a href="images/CV-San1.pdf" title="hello!"  target="_blank"><p class="text-center linkcv">Descarga mi CV</p></a>
+						<a href="images/CVSan1.pdf" title="hello!"  target="_blank"><p class="text-center linkcv">Descarga mi CV</p></a>
 					</div>
 				</div>
 			</div>
@@ -279,7 +279,7 @@
 										</div>
 										<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 											<a href="images/cajaHotOK1.jpg" data-title="Diseño de caja y marca" data-lightbox="design" class="tamañoImgED tamañoWid img-responsive">
-												<img src="images/cajaHotOK1.jpg" width="300px" alt="cajaHotOK1" class="elemento tamañoImgED tamañoWid img-responsive">
+												<img src="images/cajaHotOK1.jpg" width="300px"  alt="cajaHotOK1" class="elemento tamañoImgED tamañoWid img-responsive">
 											</a>
 										</div>
 										<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
